--- a/AMLM/Activity_1b/TC5033_Activity1b_42.ipynb
+++ b/AMLM/Activity_1b/TC5033_Activity1b_42.ipynb
@@ -21,7 +21,7 @@
         "| A01795579 | Edson Misael Astorga Castro             |\n",
         "| A01373679 | Luis Miguel Balderas González de Burgos |\n",
         "| A01730466 | Sinaí Avalos Rivera                     |\n",
-        "|           |                                         |"
+        "| A01410682 | Carlos Miguel Arvizu Durán              |"
       ]
     },
     {
